--- a/JEE6/FacesTest/WebContent/WEB-INF/web.xml
+++ b/JEE6/FacesTest/WebContent/WEB-INF/web.xml
@@ -14,6 +14,11 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>server</param-value>
+	</context-param>
+
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
@@ -40,7 +45,7 @@
 			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
-	
+
 	<security-role>
 		<description>Administrators</description>
 		<role-name>admin</role-name>
