* Puh! Deployment auf Glassfish läuft.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@4 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/WebContent/WEB-INF/web.xml
+++ b/JEE6/FacesTest/WebContent/WEB-INF/web.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app
+	xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0"
+	metadata-complete="false">
+
 	<display-name>FacesTest</display-name>
 	<distributable />
+
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -13,6 +18,10 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
