* Ant build heile gemacht.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@5 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -10,6 +10,10 @@
 	<path id="compile.path">
 		<fileset dir="${jboss.lib}">
 			<include name="**/*.jar"/>
+			<exclude name="**/*jsf*1.2*.jar"/>
+		</fileset>
+		<fileset dir="${web-path}">
+			<include name="**/*.jar"/>
 		</fileset>
 	</path>
 
