--- a/JEE6/FacesTest/.classpath
+++ b/JEE6/FacesTest/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
