--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -3,9 +3,13 @@
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src"/>
 	<property name="web-path"     value="./WebContent"/>
+
 	<property name="jboss.home"   value="/opt/jboss"/>
 	<property name="jboss.lib"    value="${jboss.home}/modules"/>
 	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
+
+	<property name="glassfish.home"   value="/opt/glassfish3"/>
+	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
 
 	<path id="compile.path">
 		<fileset dir="${jboss.lib}">
@@ -44,6 +48,7 @@
 	
 	<target name="deploy" depends="package">
 		<copy file="${war}" todir="${jboss.deploy}" />
+		<copy file="${war}" todir="${glassfish.deploy}" />
 	</target>
 	
 	<target name="undeploy">
