--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -53,5 +53,6 @@
 	
 	<target name="undeploy">
 		<delete file="${jboss.deploy}/${war}" />
+		<delete file="${glassfish.deploy}/${war}" />
 	</target>
 </project>
