--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -4,12 +4,19 @@
 	<property name="src-path"     value="./src"/>
 	<property name="web-path"     value="./WebContent"/>
 
+	<property name="findbugs.home"     value="./findbugs"/>
+	<property name="findbugs.results"  value="./findbugs-results.xml"/>
+
 	<property name="jboss.home"   value="/opt/jboss"/>
 	<property name="jboss.lib"    value="${jboss.home}/modules"/>
 	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
 
 	<property name="glassfish.home"   value="/opt/glassfish3"/>
 	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
+
+	<!-- ==================================================== -->
+	<!--              Setting up classpaths                   -->
+	<!-- ==================================================== -->
 
 	<path id="compile.path">
 		<fileset dir="${jboss.lib}">
@@ -21,7 +28,24 @@
 		</fileset>
 	</path>
 
+	<path id="findbugs.lib">
+		<fileset dir="${findbugs.home}">
+			<include name="**/*.jar"/>
+		</fileset>  
+	</path>
+
+	<!-- ==================================================== -->
+	<!--            Setting up target definitions             -->
+	<!-- ==================================================== -->
+
+	<taskdef name="findbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="findbugs.lib"/>
+	
+	<!-- ==================================================== -->
+	<!--              Setting up build targets                -->
+	<!-- ==================================================== -->
+
 	<target name="clean">
+		<delete file="${findbugs.results}"/>
 		<delete file="${war}" />
 		<delete dir="${bin-path}" />
 	</target>
@@ -54,5 +78,25 @@
 	<target name="undeploy">
 		<delete file="${jboss.deploy}/${war}" />
 		<delete file="${glassfish.deploy}/${war}" />
+	</target>
+
+	<!-- ==================================================== -->
+	<!--              Setting up runtime targets              -->
+	<!-- ==================================================== -->
+
+	<target name="findbugs" depends="compile">
+		<echo message="Checking ${ant.project.name}..."/>
+		<findbugs jvmargs="-Xmx512m" home="${findbugs.home}"
+				output="xml:withMessages"
+				outputFile="${findbugs.results}"
+				classpathref="compile.path"
+				effort="max"
+				excludeFilter="findbugs-exclude.xml"
+				reportlevel="low"
+				failonerror="true">
+			<sourcePath path="${main-project}/${src-path}"/>
+			<class location="${bin-path}"/> 
+			<auxclasspath refid="compile.path"/>
+		</findbugs>
 	</target>
 </project>
