--- a/JEE6/FacesGenerated/.classpath
+++ b/JEE6/FacesGenerated/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/generated/java"/>
 	<classpathentry kind="src" path="src/generated/resources"/>
-	<classpathentry kind="src" path="model"/>
-	<classpathentry excluding="src/generated/java/|src/generated/resources/|model/|src/main/resources/" kind="src" path=""/>
+	<classpathentry excluding="src/generated/java/|src/generated/resources/|model/|src/main/resources/|model/" kind="src" path=""/>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6"/>
+	<classpathentry kind="src" path="model"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
