* Entity Generator gebaut.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@37 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/.classpath
+++ b/JEE6/FacesGenerated/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry excluding="src/generated/java/|src/generated/resources/|model/|src/main/resources/|model/" kind="src" path=""/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="model"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
