--- a/JEE6/FacesGenerated/.classpath
+++ b/JEE6/FacesGenerated/.classpath
@@ -4,9 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/generated/java"/>
 	<classpathentry kind="src" path="src/generated/resources"/>
-	<classpathentry excluding="src/generated/java/|src/generated/resources/|model/|src/main/resources/|model/" kind="src" path=""/>
+	<classpathentry excluding="src/generated/java/|src/generated/resources/|model/|src/main/resources/|model/|src/main/java/" kind="src" path=""/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="model"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
