* History korrekt generiert.  * Refactoring.  * Zwei Beispiele generiert.  * Laufzeit Warnungen entfernt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@43 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.properties
+++ b/JEE6/FacesGenerated/build.properties
@@ -1,6 +1,7 @@
 source.. = src/generated/java/,\
            src/generated/resources/,\
            src/main/resources/,\
-           model/
+           model/,\
+           src/main/java/
 bin.includes = META-INF/,\
                .
