--- a/JEE6/FacesTest/WebContent/WEB-INF/web.xml
+++ b/JEE6/FacesTest/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<distributable />
 
 	<context-param>
-		<description>Damit nicht immer UTF-8 genommen wird ;-)</description>
+		<description>Damit nicht immer UTC genommen wird ;-)</description>
 		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
 		<param-value>true</param-value>
 	</context-param>
