* Alle generierten Komonenten werden jetzt benutzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@51 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.properties
+++ b/JEE6/FacesTest/build.properties
@@ -1,1 +1,7 @@
 jboss.home=/opt/jboss
+source.. = model/,\
+           res-gen/,\
+           src-gen/,\
+           WebContent/,\
+           src/
+bin.includes = META-INF/,\
