--- a/JEE6/FacesTest/build.properties
+++ b/JEE6/FacesTest/build.properties
@@ -4,4 +4,4 @@ source.. = model/,\
            src-gen/,\
            WebContent/,\
            src/
-bin.includes = META-INF/,\
+bin.includes =META-INF/,,
