--- a/JEE6/FacesGenerated/.classpath
+++ b/JEE6/FacesGenerated/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="src" path="model"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
