* Source wird zum Debuggen mit eingepackt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@58 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -43,6 +43,10 @@
 				<include name="**/*.class"/>
 				<exclude name="**/*Test.class"/>
 			</zipfileset>
+			<zipfileset dir="${src-path}">
+				<include name="**/*.java"/>
+				<exclude name="**/*Test.java"/>
+			</zipfileset>
 		</jar>
 	</target>
 </project>
