* Purchasing richtig modelliert.  * oAW-Tools eingeführt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@59 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -51,6 +51,7 @@
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
 			<include name="de.itemis.*.jar"/>
+			<include name="de.morknet.oaw.*.jar"/>
 			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
 			<include name="org.apache.commons.logging*.jar"/>
