--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -35,6 +35,7 @@
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
 			<include name="de.itemis.*.jar"/>
+			<include name="de.morknet.oaw.*.jar"/>
 			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
 			<include name="org.apache.commons.logging*.jar"/>
