--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -1,6 +1,7 @@
 <project name="Faces Test" default="package">
-	<property file="build.properties"/>
-	<property file="environment.properties"/>
+	<property file="${basedir}/build.properties"/>
+	<property file="${basedir}/environment.properties"/>
+
 	<property name="war"          value="facestest.war"/>
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src"/>
