* Einige Verbesserungen im Handler.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@62 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -114,6 +114,10 @@
 				<include name="**/*.xml"/>
 				<include name="**/*.properties"/>
 			</zipfileset>
+			<zipfileset dir="${src-gen-path}" prefix="WEB-INF/classes">
+				<include name="**/*.xml"/>
+				<include name="**/*.properties"/>
+			</zipfileset>
 			<zipfileset dir="${web-path}"/>
 			<zipfileset dir="${res-gen-path}"/>
 		</jar>
