* Properties werden richtig eingelesen.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@63 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -1,6 +1,8 @@
 <project name="Faces Generator Test" default="generate">
-	<property file="build.properties"/>
-	<property file="environment.properties"/>
+	<property file="${user.home}/.jee6.properties" />
+	<property file="${basedir}/build.properties"/>
+	<property file="${basedir}/environment.properties"/>
+
 	<property name="war"          value="facestest.war"/>
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src/main/java"/>
