--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -3,13 +3,16 @@
 	<property file="${basedir}/build.properties"/>
 	<property file="${basedir}/environment.properties"/>
 
-	<property name="war"          value="facestest.war"/>
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src"/>
 	<property name="src-gen-path" value="./src-gen"/>
 	<property name="res-gen-path" value="./res-gen"/>
 	<property name="web-path"     value="./WebContent"/>
 
+	<property name="war"          value="facestest.war"/>
+	<property name="module.jar"   value="ldapcontext.jar"/>
+	<property name="module.xml"   value="module.xml"/>
+	
 	<property name="findbugs.home"     value="./findbugs"/>
 	<property name="findbugs.results"  value="./findbugs-results.xml"/>
 
@@ -18,6 +21,7 @@
 	
 	<property name="jboss.home"   value="/opt/jboss"/>
 	<property name="jboss.lib"    value="${jboss.home}/modules"/>
+	<property name="jboss.module" value="${jboss.lib}/de/itemis/jee6/ldap/main"/>
 	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
 
 	<property name="glassfish.home"   value="/opt/glassfish3"/>
@@ -121,9 +125,16 @@
 			<zipfileset dir="${web-path}"/>
 			<zipfileset dir="${res-gen-path}"/>
 		</jar>
+		<jar destfile="${module.jar}">
+			<zipfileset dir="${bin-path}">
+				<include name="**/LdapFactory.class"/>
+			</zipfileset>
+		</jar>
 	</target>
 	
 	<target name="deploy" depends="package">
+		<copy file="${module.jar}" todir="${jboss.module}"/>
+		<copy file="${module.xml}" todir="${jboss.module}"/>
 		<copy file="${war}" todir="${jboss.deploy}" />
 		<copy file="${war}" todir="${glassfish.deploy}" />
 	</target>
