--- a/JEE6/de.itemis.jee6.ui/plugin.xml
+++ b/JEE6/de.itemis.jee6.ui/plugin.xml
@@ -193,4 +193,15 @@
       </markerResolutionGenerator>
    </extension>
 
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <wizard
+            category="org.eclipse.xtext.projectwiz"
+            class="de.itemis.jee6.ui.DslExecutableExtensionFactory:de.itemis.jee6.ui.wizard.DslNewProjectWizard"
+            id="de.itemis.jee6.ui.wizard.DslNewProjectWizard"
+            name="JEE6 Generator Project"
+            project="true">
+      </wizard>
+   </extension>
+
 </plugin>
