--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -1,5 +1,7 @@
 <project name="JEE6 Utilities" default="package">
-	<property file="${basedir}/build.properties" />
+	<property file="${user.home}/.jee6.properties" />
+	<property file="${basedir}/build.properties"/>
+	<property file="${basedir}/environment.properties"/>
 
 	<property name="jar"           value="jee6-utils.jar"/>
 	<property name="bin-path"      value="./bin"/>
