--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -6,11 +6,16 @@
 	<property name="jar"           value="jee6-utils.jar"/>
 	<property name="bin-path"      value="./bin"/>
 	<property name="src-path"      value="./src"/>
+	<property name="tst-path"      value="./test"/>
 	<property name="lib-path"      value="./lib"/>
 
 	<property name="jboss.home"    value="/opt/jboss"/>
 	<property name="jboss.lib"     value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"  value="${jboss.home}/standalone/deployments"/>
+
+	<property name="coverage-path" value="./coverage"/>	
+	<property name="instr-path"    value="./instr"/>	
+	<property name="emma.enabled"  value="true"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
@@ -21,7 +26,36 @@
 			<include name="**/*.jar"/>
 			<exclude name="**/*jsf*1.2*.jar"/>
 		</fileset>
+		<fileset dir="${lib-path}">
+		</fileset>
 	</path>
+
+	<path id="runtime.path">
+		<path refid="compile.path"/>
+	</path>
+
+	<path id="emma.lib">
+		<fileset dir="${lib-path}">
+		<include name="**/emma*.jar"/>
+		</fileset>
+	</path>
+
+	<path id="instr.classpath">
+		<pathelement path="${bin-path}" />
+	</path>
+
+	<path id="emma.classpath">
+		<pathelement location="${instr-path}" />  
+		<pathelement location="${bin-path}" />  
+		<path refid="runtime.path"/>
+	</path>
+
+	<!-- ==================================================== -->
+	<!--            Setting up target definitions             -->
+	<!-- ==================================================== -->
+
+	<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="runtime.path"/>
+	<taskdef resource="emma_ant.properties" classpathref="runtime.path" />
 
 	<!-- ==================================================== -->
 	<!--              Setting up build targets                -->
@@ -34,7 +68,12 @@
 
 	<target name="compile">
 		<mkdir dir="${bin-path}"/>
-		<javac srcdir="${src-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
+		<copy todir="${bin-path}">
+			<fileset dir="${tst-path}">
+				<exclude name="**/*.java"/>
+			</fileset>
+		</copy>
+		<javac srcdir="${src-path}:${tst-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
@@ -44,6 +83,7 @@
 			<zipfileset dir="${bin-path}">
 				<include name="**/*.class"/>
 				<exclude name="**/*Test.class"/>
+				<exclude name="log4j.properties"/>
 			</zipfileset>
 			<zipfileset dir="${src-path}">
 				<include name="**/*.java"/>
@@ -51,4 +91,44 @@
 			</zipfileset>
 		</jar>
 	</target>
+	<!-- ==================================================== -->
+	<!--              Setting up runtime targets              -->
+	<!-- ==================================================== -->
+
+	<target name="instr" depends="compile" if="emma.enabled">
+		<mkdir dir="${instr-path}"/>
+		<emma>
+			<instr instrpathref="instr.classpath" destdir="${instr-path}" metadatafile="metadata.emma" merge="true">
+				<filter excludes="org.*,com.*,edu.*,junit.*,gnu.io.*,java*"/>
+				<filter excludes="de.itemis.jee6.util.Profiler*"/>
+			</instr>
+		</emma>
+	</target>
+
+	<target name="test" depends="compile">
+		<taskdef resource="emma_ant.properties" classpathref="emma.lib" />
+		<junit printsummary="on" fork="on" haltonerror="yes" haltonfailure="yes">
+			<classpath refid="emma.classpath" />
+			<formatter type="xml"/>
+			<jvmarg value="-Demma.coverage.out.file=coverage.emma" />
+			<jvmarg value="-Demma.coverage.out.merge=true" />
+			<test name="de.itemis.jee6.test.UtilTest"/>
+			<test name="de.itemis.jee6.test.ErrorInfoTest"/>
+			<test name="de.itemis.jee6.test.FilterTest"/>
+		</junit>
+	</target>
+
+	<target name="emma" depends="instr,test">
+		<taskdef resource="emma_ant.properties" classpathref="emma.lib" />
+		<emma>
+			<report sourcepath="${src-path}:${tst-path}:${main-project}/${src-path}:${main-project}/${src-gen-path}">
+				<fileset dir=".">
+					<include name="*.emma"/>
+				</fileset>  
+				<txt  outfile="coverage.txt" />
+				<xml  outfile="coverage.xml" />
+				<html outfile="coverage.html" />
+			</report>  
+		</emma>
+	</target>  
 </project>
