* Plugins werden jetzt richtig gepackt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@76 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -6,6 +6,7 @@
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src"/>
 	<property name="src-gen-path" value="./src-gen"/>
+	<property name="manifest"     value="META-INF/MANIFEST.MF"/>
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
@@ -63,9 +64,11 @@
 	</target>
 	
 	<target name="package" depends="compile">
-		<jar destfile="${plugin}">
+		<jar destfile="${plugin}" manifest="${manifest}">
+			<zipfileset dir=".">
+				<include name="plugin.xml"/>
+			</zipfileset>
 			<zipfileset dir="${bin-path}"/>
-			<filename name="plugin.xml"/>
 		</jar>
 	</target>
 	
