--- a/JEE6/FacesTest/.classpath
+++ b/JEE6/FacesTest/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="WebContent"/>
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="src" path="res-gen"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime">
 		<attributes>
 			<attribute name="owner.project.facets" value="#system#;jst.web;jst.jsf"/>
@@ -11,6 +12,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
