* Emma auf Test umgestellt (reicht an dieser Stelle)
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@90 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -20,6 +20,10 @@
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
+
+	<property name="coverage-path" value="./coverage"/>	
+	<property name="instr-path"    value="./instr"/>	
+	<property name="emma.enabled"  value="true"/>
 	
 	<property name="jboss.home"   value="/opt/jboss"/>
 	<property name="jboss.lib"    value="${jboss.home}/modules"/>
@@ -28,10 +32,6 @@
 
 	<property name="glassfish.home"   value="/opt/glassfish3"/>
 	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
-
-	<property name="coverage-path" value="./coverage"/>	
-	<property name="instr-path"    value="./instr"/>	
-	<property name="emma.enabled"  value="true"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
@@ -54,28 +54,13 @@
 
 	<path id="runtime.path">
 		<path refid="compile.path"/>
+		<pathelement location="${bin-path}" />  
 	</path>
 
 	<path id="findbugs.lib">
 		<fileset dir="${findbugs.home}">
 			<include name="**/*.jar"/>
 		</fileset>  
-	</path>
-
-	<path id="emma.lib">
-		<fileset dir="${lib-path}">
-			<include name="**/emma*.jar"/>
-		</fileset>
-	</path>
-
-	<path id="instr.classpath">
-		<pathelement path="${bin-path}" />
-	</path>
-
-	<path id="emma.classpath">
-		<pathelement location="${instr-path}" />  
-		<pathelement location="${bin-path}" />  
-		<path refid="runtime.path"/>
 	</path>
 
 	<path id="generate.classpath">
@@ -112,7 +97,6 @@
 
 	<taskdef name="findbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="findbugs.lib"/>
 	<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="runtime.path"/>
-	<taskdef resource="emma_ant.properties" classpathref="runtime.path" />
 
 	<!-- ==================================================== -->
 	<!--              Setting up build targets                -->
@@ -186,40 +170,13 @@
 	<!--              Setting up runtime targets              -->
 	<!-- ==================================================== -->
 
-	<target name="instr" depends="compile" if="emma.enabled">
-		<mkdir dir="${instr-path}"/>
-		<emma>
-			<instr instrpathref="instr.classpath" destdir="${instr-path}" metadatafile="metadata.emma" merge="true">
-				<filter excludes="org.*,com.*,edu.*,junit.*,gnu.io.*,java*"/>
-				<filter excludes="de.itemis.jee6.util.Profiler*"/>
-			</instr>
-		</emma>
-	</target>
-
 	<target name="test" depends="compile">
-		<taskdef resource="emma_ant.properties" classpathref="emma.lib" />
 		<junit printsummary="on" fork="on" haltonerror="yes" haltonfailure="yes">
-			<classpath refid="emma.classpath" />
+			<classpath refid="runtime.path" />
 			<formatter type="xml"/>
-			<jvmarg value="-Demma.coverage.out.file=coverage.emma" />
-			<jvmarg value="-Demma.coverage.out.merge=true" />
 			<test name="de.itemis.faces.test.EntityTest"/>
 		</junit>
 	</target>
-
-	<target name="emma" depends="instr,test">
-		<taskdef resource="emma_ant.properties" classpathref="emma.lib" />
-		<emma>
-			<report sourcepath="${src-path}:${tst-path}:${main-project}/${src-path}:${main-project}/${src-gen-path}">
-				<fileset dir=".">
-					<include name="*.emma"/>
-				</fileset>  
-				<txt  outfile="coverage.txt" />
-				<xml  outfile="coverage.xml" />
-				<html outfile="coverage.html" />
-			</report>  
-		</emma>
-	</target>  
 
 	<target name="findbugs" depends="compile">
 		<echo message="Checking ${ant.project.name}..."/>
