--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -11,8 +11,6 @@
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
 
-	<property name="plugin" value="de.itemis.jee6_1.0.0.jar"/>
-
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
 	<!-- ==================================================== -->
@@ -76,7 +74,21 @@
 		</javac>
 	</target>
 	
-	<target name="package" depends="compile">
+	<target name="version">
+	    <loadproperties srcfile="META-INF/MANIFEST.MF">
+	        <filterchain>
+	            <linecontains>
+	                <contains value="Bundle-Version" />
+	            </linecontains>
+	            <tokenfilter>
+	                <replaceregex pattern="^Bundle-Version: d*.d*.d*s*$" replace="" />
+	            </tokenfilter>
+	        </filterchain>
+	    </loadproperties>
+		<property name="plugin" value="de.itemis.jee6_${Bundle-Version}.jar"/>
+	</target>
+	
+	<target name="package" depends="compile,version">
 		<jar destfile="${plugin}" manifest="${manifest}">
 			<zipfileset dir=".">
 				<include name="plugin.xml"/>
