--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -3,12 +3,14 @@
 	<property file="${basedir}/build.properties"/>
 	<property file="${basedir}/environment.properties"/>
 
-	<property name="war"          value="facestest.war"/>
+	<property name="war"          value="example.war"/>
 	<property name="bin-path"     value="./bin"/>
 	<property name="src-path"     value="./src/main/java"/>
 	<property name="res-path"     value="./src/main/resources"/>
 	<property name="src-gen-path" value="./src/generated/java"/>
-	<property name="res-gen-path" value="./src/generated/resource"/>
+	<property name="res-gen-path" value="./src/generated/resources"/>
+	<property name="lib-path"     value="${res-path}/WEB-INF/lib"/>
+
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
@@ -29,6 +31,7 @@
 			<include name="**/*.jar"/>
 			<exclude name="**/*jsf*1.2*.jar"/>
 		</fileset>
+		<fileset dir="${lib-path}"/>
 	</path>
 
 	<path id="generate.classpath">
@@ -69,10 +72,26 @@
 		<delete dir="${bin-path}" />
 	</target>
 
+	<target name="clobber" depends="clean">
+		<delete>
+			<fileset dir="${src-path}">
+			    <include name="**/*.properties"/>
+				<include name="**/beans/**"/>
+				<include name="**/dao/**"/>
+				<include name="**/handler/**"/>
+			</fileset>
+			<fileset dir="${res-path}">
+				<include name="**/*"/>
+			</fileset>
+		</delete>
+	</target>
+
 	<target name="generate">
 		<echo message="${eclipse.home}"/>
+		<mkdir dir="${lib-path}"/>
+		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
 		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
-			<arg value="${res-path}/example.mwe2"/>
+			<arg value="${src-path}/example.mwe2"/>
 		</java>
 	</target>
 
@@ -82,4 +101,35 @@
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
+
+	<target name="package" depends="compile">
+		<jar destfile="${war}">
+			<zipfileset dir="${bin-path}" prefix="WEB-INF/classes">
+				<include name="**/*.class"/>
+				<exclude name="**/*Test.class"/>
+			</zipfileset>
+			<zipfileset dir="${src-path}" prefix="WEB-INF/classes">
+				<include name="**/*.xml"/>
+				<include name="**/*.properties"/>
+			</zipfileset>
+			<zipfileset dir="${src-gen-path}" prefix="WEB-INF/classes">
+				<include name="**/*.xml"/>
+				<include name="**/*.properties"/>
+			</zipfileset>
+			<zipfileset dir="${res-path}"/>
+			<zipfileset dir="${res-gen-path}"/>
+		</jar>
+	</target>
+	
+	<target name="deploy" depends="package">
+		<copy file="${war}" todir="${jboss.deploy}" />
+		<copy file="${war}" todir="${glassfish.deploy}" />
+	</target>
+	
+	<target name="undeploy">
+		<delete file="${jboss.deploy}/${war}" />
+		<delete file="${glassfish.deploy}/${war}" />
+	</target>
+	
+	<target name="round-trip" depends="clobber,generate,deploy"/>
 </project>
