* Datenbank-Konfigurationen vereinheitlicht.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@118 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.properties
+++ b/JEE6/FacesGenerated/build.properties
@@ -1,3 +1,5 @@
+jboss.home=/opt/jboss
+glassfish.home=/opt/glassfish
 source.. = src/generated/java/,\
            src/generated/resources/,\
            src/main/resources/,\
