--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -1,7 +1,6 @@
 <project name="Faces Generator Test" default="generate">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
-	<property file="${basedir}/environment.properties"/>
 
 	<property name="war"          value="example.war"/>
 	<property name="bin-path"     value="./bin"/>
@@ -15,12 +14,12 @@
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
 	
-	<property name="jboss.home"   value="/opt/jboss"/>
-	<property name="jboss.lib"    value="${jboss.home}/modules"/>
-	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
+	<property name="jboss.home"           value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.lib"            value="${jboss.home}/modules"/>
+	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
 
-	<property name="glassfish.home"   value="/opt/glassfish3"/>
-	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
+	<property name="glassfish.home"       value="/opt/glassfish3"/>
+	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
