--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -1,37 +1,36 @@
 <project name="Faces Test" default="package">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
-	<property file="${basedir}/environment.properties"/>
 
-	<property name="bin-path"     value="./bin"/>
-	<property name="src-path"     value="./src"/>
-	<property name="src-gen-path" value="./src-gen"/>
-	<property name="res-gen-path" value="./res-gen"/>
-	<property name="web-path"     value="./WebContent"/>
-	<property name="tst-path"     value="./test"/>
-	<property name="lib-path"     value="../de.itemis.jee6.util/lib"/>
+	<property name="bin-path"             value="./bin"/>
+	<property name="src-path"             value="./src"/>
+	<property name="src-gen-path"         value="./src-gen"/>
+	<property name="res-gen-path"         value="./res-gen"/>
+	<property name="web-path"             value="./WebContent"/>
+	<property name="tst-path"             value="./test"/>
+	<property name="lib-path"             value="../de.itemis.jee6.util/lib"/>
 
-	<property name="war"          value="facestest.war"/>
-	<property name="module.jar"   value="ldapcontext.jar"/>
-	<property name="module.xml"   value="module.xml"/>
+	<property name="war"                  value="facestest.war"/>
+	<property name="module.jar"           value="ldapcontext.jar"/>
+	<property name="module.xml"           value="module.xml"/>
 	
-	<property name="findbugs.home"     value="./findbugs"/>
-	<property name="findbugs.results"  value="./findbugs-results.xml"/>
+	<property name="findbugs.home"        value="./findbugs"/>
+	<property name="findbugs.results"     value="./findbugs-results.xml"/>
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
 
-	<property name="coverage-path" value="./coverage"/>	
-	<property name="instr-path"    value="./instr"/>	
-	<property name="emma.enabled"  value="true"/>
-	
-	<property name="jboss.home"   value="/opt/jboss"/>
-	<property name="jboss.lib"    value="${jboss.home}/modules"/>
-	<property name="jboss.module" value="${jboss.lib}/de/itemis/jee6/ldap/main"/>
-	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
+	<property name="coverage-path"        value="./coverage"/>	
+	<property name="instr-path"           value="./instr"/>	
+	<property name="emma.enabled"         value="true"/>
 
-	<property name="glassfish.home"   value="/opt/glassfish3"/>
-	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
+	<property name="jboss.home"           value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.lib"            value="${jboss.home}/modules"/>
+	<property name="jboss.module"         value="${jboss.lib}/de/itemis/jee6/ldap/main"/>
+	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
+
+	<property name="glassfish.home"       value="/opt/glassfish3"/>
+	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
