--- a/JEE6/MinimalWebApplication/build.xml
+++ b/JEE6/MinimalWebApplication/build.xml
@@ -1,17 +1,16 @@
 <project name="Minimal JEE6-App" default="package">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
-	<property file="${basedir}/environment.properties"/>
 
-	<property name="bin-path"     value="./bin"/>
-	<property name="src-path"     value="./src"/>
-	<property name="web-path"     value="./WebContent"/>
+	<property name="bin-path"         value="./bin"/>
+	<property name="src-path"         value="./src"/>
+	<property name="web-path"         value="./WebContent"/>
 
-	<property name="war"          value="minimal.war"/>
+	<property name="war"              value="minimal.war"/>
 	
-	<property name="jboss.home"   value="/opt/jboss"/>
-	<property name="jboss.lib"    value="${jboss.home}/modules"/>
-	<property name="jboss.deploy" value="${jboss.home}/standalone/deployments"/>
+	<property name="jboss.home"       value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.lib"        value="${jboss.home}/modules"/>
+	<property name="jboss.deploy"     value="${jboss.home}/standalone/deployments"/>
 
 	<property name="glassfish.home"   value="/opt/glassfish3"/>
 	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
