--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -1,7 +1,6 @@
 <project name="JEE6 Utilities" default="package">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
-	<property file="${basedir}/environment.properties"/>
 
 	<property name="jar"           value="jee6-utils.jar"/>
 	<property name="bin-path"      value="./bin"/>
@@ -10,7 +9,7 @@
 	<property name="lib-path"      value="./lib"/>
 	<property name="doc-path"      value="../api"/>
 
-	<property name="jboss.home"    value="/opt/jboss"/>
+	<property name="jboss.home"    value="/opt/jboss-as-7.1.1.Final"/>
 	<property name="jboss.lib"     value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"  value="${jboss.home}/standalone/deployments"/>
 
