* Icons für JEE6-Modelldatei hinzugefügt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@126 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -4,6 +4,7 @@
 	<property file="${basedir}/environment.properties"/>
 
 	<property name="bin-path"     value="./bin"/>
+	<property name="ico-path"     value="./icons"/>
 	<property name="src-path"     value="./src"/>
 	<property name="src-gen-path" value="./src-gen"/>
 	<property name="manifest"     value="META-INF/MANIFEST.MF"/>
@@ -79,6 +80,7 @@
 		<jar destfile="${plugin}" manifest="${manifest}">
 			<zipfileset dir=".">
 				<include name="plugin.xml"/>
+				<include name="**/*.gif"/>
 			</zipfileset>
 			<zipfileset dir="${bin-path}"/>
 		</jar>
