* Weitere Tests.  * AbstractHandler initialisiert Resource Bundle wieder public.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@135 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -125,6 +125,7 @@
 			<instr instrpathref="instr.classpath" destdir="${instr-path}" metadatafile="metadata.emma" merge="true">
 				<filter excludes="org.*,com.*,edu.*,junit.*,gnu.io.*,java*"/>
 				<filter excludes="de.itemis.jee6.util.Profiler*"/>
+				<filter excludes="de.itemis.jee6.test.*"/>
 			</instr>
 		</emma>
 	</target>
