* JEE6-Utils werden korrekt kopiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@164 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -77,6 +77,11 @@
 	</target>
 	
 	<target name="package" depends="compile,-version">
+		<copy todir="resources">
+			<fileset dir="../de.itemis.jee6.util">
+				<include name="jee6-utils.jar"/>
+			</fileset>
+		</copy>
 		<jar destfile="${plugin}" manifest="${manifest}">
 			<zipfileset dir="${bin-path}"/>
 			<zipfileset dir=".">
